--- a/Mẹ..html
+++ b/Mẹ..html
@@ -8,7 +8,7 @@
             background-color: #f2f2f2;
             text-align: center;
             color: #333;
-            background-image: url('https://u-static.fotor.com/images/text-to-image/result/PRO-2bc3e7c4d8454272ac208b831a045a66.jpg');
+            background-image: url('fotor-ai-2024102044322.jpg');
             background-size: cover;
             background-repeat: no-repeat;
             background-attachment: fixed;
